--- a/alphaprodigyspeakers/speakers/templates/htmls/booking.html
+++ b/alphaprodigyspeakers/speakers/templates/htmls/booking.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Book {{ service.name }} - Alpha Prodigy Speakers
-{% endblock %}
+    Book {{ service.name }} - Alpha Prodigy Speakers{
+% endblock %}
 
 {% block header %}
     Book {{ service.name }}
