--- a/alphaprodigyspeakers/speakers/templates/htmls/service_list.html
+++ b/alphaprodigyspeakers/speakers/templates/htmls/service_list.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Services - Alpha Prodigy Speakers
-{% endblock %}
+    Services - Alpha Prodigy Speakers{
+% endblock %}
 
 {% block header %}
     Our Services
