made enhancements to ensure that a user is sent an email after booking a service. Also, there are reviews sessions, so I have added models and updated views to reflect the changes and made migrations.

--- a/alphaprodigyspeakers/templates/htmls/base.html
+++ b/alphaprodigyspeakers/templates/htmls/base.html
@@ -30,6 +30,12 @@
             {% endblock %}
         </h1>
     </header>
+
+    <form method="get" action="{% url 'search' %}">
+        <input type="text" name="q" placeholder="Search services...">
+        <button type="submit">Search</button>
+    </form>
+    
     <main>
         {% block content %}
         {% endblock %}
