--- a/alphaprodigyspeakers/templates/htmls/service_detail.html
+++ b/alphaprodigyspeakers/templates/htmls/service_detail.html
@@ -1,18 +1,28 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    {{ service.name }} - Alpha Prodigy Speakers
-{% endblock %}
-
-{% block header %}
     {{ service.name }}
 {% endblock %}
 
 {% block content %}
 <section id="service_detail">
-    <h2>Service Details</h2>
+    <h2>{{ service.name }}</h2>
     <p>{{ service.description }}</p>
     <p>Price: {{ service.price }} USD</p>
-    <a href="{% url 'booking' service.id %}">Book Now</a>
+
+    <h3>Reviews</h3>
+    {% for review in reviews %}
+        <div class="review">
+            <p><strong>{{ review.user.username }}</strong>: {{ review.rating }} stars</p>
+            <p>{{ review.comment }}</p>
+        </div>
+    {% endfor %}
+
+    <h3>Leave a Review</h3>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit Review</button>
+    </form>
 </section>
 {% endblock %}
