--- a/alphaprodigyspeakers/static/styles.css
+++ b/alphaprodigyspeakers/static/styles.css
@@ -20,6 +20,7 @@ nav ul {
     padding: 0;
     margin: 0;
     text-align: center;
+    color: #e9ecef;
 }
 
 nav ul li {
@@ -153,7 +154,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 10px;
+    padding: 1px;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
 }
 
