--- a/alphaprodigyspeakers/templates/htmls/order_summary.html
+++ b/alphaprodigyspeakers/templates/htmls/order_summary.html
@@ -14,6 +14,6 @@
     <p>Service: {{ order.booking.service.name }}</p>
     <p>Date: {{ order.booking.date }}</p>
     <p>Total Price: {{ order.booking.service.price }} USD</p>
-    <button>Proceed to Payment</button>
+    <button type="submit" class="btn">Proceed to Payment</button>
 </section>
 {% endblock %}
