--- a/alphaprodigyspeakers/templates/htmls/payment.html
+++ b/alphaprodigyspeakers/templates/htmls/payment.html
@@ -13,7 +13,7 @@
     <h2>Complete Your Payment</h2>
     <form method="post">
         {% csrf_token %}
-        <button type="submit">Pay with PayPal</button>
+        <button type="submit" class="btn"> Pay with PayPal</button>
     </form>
 </section>
 {% endblock %}
