--- a/alphaprodigyspeakers/templates/htmls/registration/register.html
+++ b/alphaprodigyspeakers/templates/htmls/registration/register.html
@@ -14,7 +14,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Sign Up</button>
+        <button type="submit" class="btn">Sign Up</button>
     </form>
 </section>
 {% endblock %}
