--- a/alphaprodigyspeakers/templates/htmls/service_detail.html
+++ b/alphaprodigyspeakers/templates/htmls/service_detail.html
@@ -10,6 +10,12 @@
     <p>{{ service.description }}</p>
     <p>Price: {{ service.price }} USD</p>
 
+    {% if user.is_authenticated %}
+        <a href="{% url 'booking' service.id %}" class="btn">Book Now</a>
+    {% else %}
+        <p><a href="{% url 'login' %}">Log in</a> to book this service.</p>
+    {% endif %}
+
     <h3>Reviews</h3>
     {% for review in reviews %}
         <div class="review">
@@ -18,11 +24,15 @@
         </div>
     {% endfor %}
 
-    <h3>Leave a Review</h3>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit Review</button>
-    </form>
+    {% if has_booked %}
+        <h3>Leave a Review</h3>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Submit Review</button>
+        </form>
+    {% else %}
+        <p>You need to book this service before you can leave a review.</p>
+    {% endif %}
 </section>
 {% endblock %}
