--- a/alphaprodigyspeakers/templates/htmls/base.html
+++ b/alphaprodigyspeakers/templates/htmls/base.html
@@ -19,12 +19,7 @@
                     <li>
                         <form action="{% url 'logout' %}" method="post" style="display: inline;">
                             {% csrf_token %}
-                            <button type="submit" 
-                                style="background: 
-                                none; border: none; 
-                                color: white; 
-                                cursor: pointer;">
-                                Logout</button>
+                            <button type="submit" style="background: none; border: none; color: white; cursor: pointer;">Logout</button>
                         </form>
                     </li>
                 {% else %}
