--- a/alphaprodigyspeakers/templates/htmls/base.html
+++ b/alphaprodigyspeakers/templates/htmls/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Alpha Prodigy Speakers{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <script src="{% static 'scripts.js' %}" defer></script>
+    <script src="{% static 'script.js' %}" defer></script>
 </head>
 
 <body>
