--- a/alphaprodigyspeakers/templates/htmls/service_detail.html
+++ b/alphaprodigyspeakers/templates/htmls/service_detail.html
@@ -10,25 +10,13 @@
     <p>{{ service.description }}</p>
     <p>Price: {{ service.price }} USD</p>
 
-    <h3>Reviews</h3>
-    {% if reviews %}
-        <ul>
-            {% for review in reviews %}
-                <li>
-                    <strong>{{ review.user.username }}</strong> rated it {{ review.rating }} stars
-                    <p>{{ review.comment }}</p>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>No reviews yet. Be the first to review this service!</p>
-    {% endif %}
 
-    <h3>Leave a Review</h3>
+    <h3>Book This Service</h3>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn">Submit Review</button>
+        <button type="submit" class="btn">Book Now</button>
     </form>
+
 </section>
 {% endblock %}
