all css has been updated. Thank you very much

--- a/alphaprodigyspeakers/templates/htmls/home.html
+++ b/alphaprodigyspeakers/templates/htmls/home.html
@@ -50,7 +50,7 @@
     <p>Ready to elevate your next event with the power of Alpha Prodigy Speakers? Contact us today to learn more about our services and how we can help you achieve your goals.</p>
     <ul>
         <li><strong>Email:</strong> <a href="mailto:annetdaisymm@gmail.com">info@alphaprodigyspeakers.com</a></li>
-        <li><strong>Phone:</strong> <a href="tel:+254114591001">Phone Number</a></li>
+        <li><strong>Phone:</strong> <a href="tel:+254114591001">Call Daisy</a></li>
         <li><strong>Address:</strong> Alpha Prodigy Speakers, Nairobi, Kenya</li>
     </ul>
 </section>
