--- a/alphaprodigyspeakers/templates/htmls/payment_success.html
+++ b/alphaprodigyspeakers/templates/htmls/payment_success.html
@@ -11,7 +11,7 @@
 {% block content %}
 <section id="payment_success">
     <h2>Thank You!</h2>
-    <p>Your payment for {{ booking.service.name }} has been successful.</p>
+    <p>Your payment for {{ booking.service.name }} has been successful. We look forward to serving you at Alpha Prodigy Speakers.</p>
     <p>Booking Date: {{ booking.date }}</p>
 </section>
 {% endblock %}
