some changes to try fix the avatar, but the rest of profile works. I have deleted the avatars folder since now am using the media.

--- a/alphaprodigyspeakers/static/styles.css
+++ b/alphaprodigyspeakers/static/styles.css
@@ -53,7 +53,7 @@ main {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 1200px; /* Increase max-width for larger screens */
+    max-width: 100%; /* Increase max-width for larger screens */
     min-height: calc(100vh - 160px); /* Ensuring main content takes up full height minus header and footer */
 }
 
@@ -469,7 +469,7 @@ nav.dark-mode ul li a:hover {
 
     /* Adjust the max-width of the main content */
     main {
-        max-width: 700px !important;
+        max-width: 100% !important;
         padding: 10px !important;
     }
 
@@ -478,6 +478,7 @@ nav.dark-mode ul li a:hover {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
 }
+
 
 /* For extra-small screens (max-width: 576px) */
 @media (max-width: 576px) {
@@ -492,4 +493,7 @@ nav.dark-mode ul li a:hover {
         grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
     }
 }
+
+
+
 
