--- a/alphaprodigyspeakers/templates/htmls/booking.html
+++ b/alphaprodigyspeakers/templates/htmls/booking.html
@@ -6,18 +6,17 @@
 
 {% block content %}
 <section id="booking">
-    <h2>Create a Booking {{ service.name }}</h2>
+    <h2>Create a Booking for {{ service.name }}</h2>
     <p>Have me speak at your event for {{ service.price }} USD</p>
-    <label for="date">Booking Date:</label>
-    <input type="date" id="date" name="date" required>
-    <script>
-        document.getElementById('date').setAttribute('min', new Date().toISOString().split('T')[0]);
-    </script>
 
-    <form method="post">
+    <form method="post" action="{% url 'create_booking' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn">Book Now</button>
     </form>
 </section>
+
+<script>
+    document.getElementById('id_date').setAttribute('min', new Date().toISOString().split('T')[0]);
+</script>
 {% endblock %}
